[package]
name = "p2p-handshake"
version = "0.1.0"
edition = "2021"
authors = ["Mark Carroll <mtbc@bcs.org>"]

[dependencies]
base64 = "0.21.2"
bs58 = { version = "0.5.0", features = ["check"] }
byteorder = "1.4.3"
chrono = { version = "0.4.26", default-features = false, features = ["clock"] }
clap = { version = "4.3.23", features = ["env"] }
futures = "0.3.28"
hex = "0.4.3"
ip_rfc = "0.1.0"
k256 = { version = "0.13.1", features = ["ecdsa", "pem"] }
lazy_static = "1.4.0"
local-ip-address = "0.5.4"
openssl = "0.10.56"
sha2 = "0.10.7"
thiserror = "1.0.47"
tokio = { version = "1.32.0", features = ["io-util", "macros", "net", "rt-multi-thread"] }
tokio-openssl = "0.6.3"
version = "3.0.0"
